Changelog
=========

1.2rc2 - unreleased
-------------------

- Removed msgids in portlets.xml. There is no support for
  msgids in the import of portlets.xml implementation.
  This allows to extract translatable strings with i18ndude.
  [vincentfretin]


1.2rc1 - March 27, 2009
-----------------------

- The portlet was incorrectly using the 'Manage portlet' permission. It now
  uses a custom permission with the same default roles.
  Fixes http://dev.plone.org/plone/ticket/8403.
  [optilude]

- Declare test dependencies in an extra.
  [hannosch]

- Specify package dependencies.
  [hannosch]

- Added 'tile' CSS class to the links within dt.portletHeader and 
  dd.portletFooter for static portlet's template
  [spliter]

1.1.5 - August 18th, 2008
-------------------------

- Fixed a typo in CSS class name. This closes
  http://dev.plone.org/plone/ticket/8119.
  [hannosch]

1.1.2 - June 1st 2008
---------------------

- Added more i18n in the main python file as the i18n in portlets.xml
  is not used.  [maurits]

- Added option to (temporarily) hide the portlet without needing to
  delete it.  [maurits]


1.1.0 - April 20th 2008
-----------------------

- Unchanged from 1.1rc2

1.1rc2 - March 26, 2008
-----------------------

- Use README.txt and HISTORY.txt as the package's long description and
  add missing history entries for all releases.
  [wichert]

- Fix the version restriction on the plone.app.form dependency.
  [wichert]

1.1rc1 - March 25, 2008
-----------------------

- Add missing i18n support.
  [hannosch]

- Add a version restriction on the plone.app.form dependency.
  [optilude]


1.1.0a1 - March 9, 2008
-----------------------

- Packaging cleanups
  [wichert]

- PLIP 184: make text editable using a rich text editor such as kupu
  [optilude]

- Add an 'omit border' option
  [optilude]


1.0b3 - August 27, 2007
-----------------------

- Correct portlet styling to Plone standards
  [optilude]


1.0b2 - August 26, 2007
-----------------------
