@@ -37,6 +37,7 @@ setup(name='plone.portlet.static',
           'zope.i18nmessageid',
           'zope.interface',
           'zope.schema',
+          'Products.kupu',
           # 'Zope2',
       ],
       )
